[gd_scene load_steps=3 format=3 uid="uid://c0jx72lkysepy"]

[ext_resource type="Script" path="res://MarkerMenu/MoreMenuWindow.gd" id="1_w1eqe"]
[ext_resource type="Script" path="res://TinyScripts/TypeChooser.gd" id="2_omuem"]

[node name="MoreMenuWindow" type="Window"]
size = Vector2i(450, 500)
script = ExtResource("1_w1eqe")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainerSize" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainerSize"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
text = "Size in mu:"
vertical_alignment = 1

[node name="WidthEntry" type="SpinBox" parent="MarginContainer/VBoxContainer/HBoxContainerSize"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
max_value = 500.0
prefix = "S:"
suffix = "mu"

[node name="HBoxContainerPos" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainerPos"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
text = "Position in mu:"
vertical_alignment = 1

[node name="XEntry" type="SpinBox" parent="MarginContainer/VBoxContainer/HBoxContainerPos"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
max_value = 100000.0
prefix = "X:"
suffix = "mu"

[node name="YEntry" type="SpinBox" parent="MarginContainer/VBoxContainer/HBoxContainerPos"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
max_value = 100000.0
prefix = "Y:"
suffix = "mu"

[node name="HBoxContainerColor" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainerColor"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
text = "Color:"
vertical_alignment = 1

[node name="ColorPickerButton" type="ColorPickerButton" parent="MarginContainer/VBoxContainer/HBoxContainerColor"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
text = "Note:"
vertical_alignment = 1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "â†“"

[node name="TextEditNotes" type="TextEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
wrap_mode = 1

[node name="TypeChooser" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("2_omuem")

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
